# imgui-wlib

./: .clang-format  .gitignore  CMakeLists.txt
backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
include/imgui/: imconfig.h  imgui.h  imgui_internal.h  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
testproject/: CMakeLists.txt  conanfile.txt  main.cpp
